# booktocards

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
booktocards/: aggrid_utils.py  annotations.py  datacl.py  dataclasses.py  io.py  iterables.py  jamdict.py  jamdict_utils.py  jj_dicts.py  kb.py  parser.py  scheduler.py  spacy.py  spacy_utils.py  sudachi.py  tatoeba.py  text.py
conf/: extractor.yaml.template  scheduler.yaml  secrets.yaml.template
scripts/: 0_app.py  0_prepare_sanseido.py  0_sudachipy.py  1_app.py  2_on_the_fly.py  5_remove_duplicated_kanjis.py  extend_card.py  slack_preproc.py  tests_ankipandas.py  tmp_slack.py
scripts/deprecated/: 0_prepare_sanseido.py  0_sudachipy.py  2_migrate_kb_types.py  3_migrate_kb_to_add_doc_table.py  4_add_priority_column.py  slack_preproc.py
tests/: test_jamdict.py  test_kb.py  test_parser.py  test_scheduler.py  test_sudachi.py
