[tool.poetry]
name = "booktocards"
version = "0.1.0"
description = "Extract japanese words and convert them to English"
authors = ["Xavier Fontaine"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
SudachiPy = "^0.6.3"
ipython = "^8.1.0"
jamdict = "^0.1a11"
SudachiDict-core = "^20211220"
#SudachiDict-full = "^20211220"
jamdict-data = "^1.5"
spacy = "^3.2.2"
pandas = "^1.4.1"
SudachiDict-full = "^20211220"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
unittest = "^0.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
