[tool.poetry]
name = "booktocards"
version = "0.1.0"
description = "Extract japanese words and convert them to English"
authors = ["Xavier Fontaine"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.12.7,<3.13"
SudachiPy = "^0.6.3"
ipython = "^8.1.0"
jamdict = "^0.1a11"
SudachiDict-core = "^20211220"
#SudachiDict-full = "^20211220"
jamdict-data = "^1.5"
spacy = "^3.2.2"
pandas = "^2.0.0"
SudachiDict-full = "^20211220"
PyYAML = "^6.0"
deepl = "^1.10.0"
tatoebatools = "^0.2.1"
ankipandas = "^0.3.10"
streamlit = "^1.13.0"
streamlit-aggrid = "^0.3.3"
better-exceptions = "^0.3.3"
pybind11 = "^2.10.3"
mypy = "^1.19.1"
pandas-stubs = "^2.3.3.251219"
types-tqdm = "^4.67.0.20250809"
types-pyyaml = "^6.0.12.20250915"
ipdb = "^0.13.13"
pre-commit = "^4.5.1"

[tool.poetry.dev-dependencies]
black = "^25.12.0"
flake8 = "^7.3.0"
pytest = "^9.0.2"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rsxX -l"

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
  "jamdict",
  "sudachipy",
  "tatoebatools",
  "st_aggrid",
]
ignore_missing_imports = true
